deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: petlog-frontend
  namespace: petlog
spec:
  selector:
    app: petlog-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
