deploy/ingress.yaml
apiVersion: networking.k9s.io/v1
kind: Ingress
metadata:
  name: petlog-ingress
  namespace: petlog
spec:
  ingressClassName: nginx
  rules:
    - host: petlog.kubernetes.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: petlog-frontend
                port:
                  number: 80
          - path: /api/v1
            pathType: Prefix
            backend:
              service:
                name: petlog-backend
                port:
                  number: 80
